--- a/environment.yml
+++ b/environment.yml
@@ -3,513 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _anaconda_depends=2023.09=py311_openblas_1
-  - aiobotocore=2.7.0=pyhd8ed1ab_1
-  - aiohttp=3.8.6=py311h05b510d_1
-  - aioitertools=0.11.0=pyhd8ed1ab_0
-  - aiosignal=1.3.1=pyhd8ed1ab_0
-  - alabaster=0.7.13=pyhd8ed1ab_0
-  - anaconda=custom=py311_2
-  - aom=3.6.1=hb765f3a_0
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - applaunchservices=0.3.0=pyhd8ed1ab_2
-  - appnope=0.1.3=pyhd8ed1ab_0
-  - appscript=1.2.2=py311heffc1b2_1
-  - argon2-cffi=23.1.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py311heffc1b2_4
-  - arrow=1.3.0=pyhd8ed1ab_0
-  - astroid=2.15.8=py311h267d04e_0
-  - astropy=5.3.4=py311h9ea6feb_2
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - async-lru=2.0.4=pyhd8ed1ab_0
-  - async-timeout=4.0.3=pyhd8ed1ab_0
-  - atomicwrites=1.4.1=pyhd8ed1ab_0
-  - attrs=23.1.0=pyh71513ae_1
-  - automat=22.10.0=pyhd8ed1ab_0
-  - autopep8=2.0.4=pyhd8ed1ab_0
-  - aws-c-auth=0.7.5=he6edc6d_0
-  - aws-c-cal=0.6.7=ha251d5a_0
-  - aws-c-common=0.9.4=h93a5062_0
-  - aws-c-compression=0.2.17=ha251d5a_4
-  - aws-c-event-stream=0.3.2=hd73d0d5_4
-  - aws-c-http=0.7.13=hb3e5a72_7
-  - aws-c-io=0.13.35=h0f79f92_4
-  - aws-c-mqtt=0.9.8=he2964ae_0
-  - aws-c-s3=0.3.20=h8d12f51_1
-  - aws-c-sdkutils=0.1.12=ha251d5a_3
-  - aws-checksums=0.1.17=ha251d5a_3
-  - aws-crt-cpp=0.24.4=h5f3d163_2
-  - aws-sdk-cpp=1.11.182=hba14a0b_2
-  - babel=2.13.1=pyhd8ed1ab_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
-  - bcrypt=4.0.1=py311h0563b04_1
-  - beautifulsoup4=4.12.2=pyha770c72_0
-  - binaryornot=0.4.4=py_1
-  - black=23.10.1=py311h267d04e_0
-  - blas=2.119=openblas
-  - blas-devel=3.9.0=19_osxarm64_openblas
-  - bleach=6.1.0=pyhd8ed1ab_0
-  - blinker=1.7.0=pyhd8ed1ab_0
-  - blosc=1.21.5=hc338f07_0
-  - bokeh=3.3.0=pyhd8ed1ab_0
-  - botocore=1.31.64=pyhd8ed1ab_0
-  - brotli=1.1.0=hb547adb_1
-  - brotli-bin=1.1.0=hb547adb_1
-  - brotli-python=1.1.0=py311ha891d26_1
-  - brunsli=0.1=h9f76cd9_0
-  - bzip2=1.0.8=h3422bc3_4
-  - c-ares=1.20.1=h93a5062_1
-  - c-blosc2=2.10.5=h8eb3132_0
-  - ca-certificates=2023.7.22=hf0a4a13_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - certifi=2023.7.22=pyhd8ed1ab_0
-  - cffi=1.16.0=py311h4a08483_0
-  - chardet=5.2.0=py311h267d04e_1
-  - charls=2.4.2=h13dd4ca_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - click=8.1.7=unix_pyh707e725_0
-  - cloudpickle=3.0.0=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - colorcet=3.0.1=pyhd8ed1ab_0
-  - comm=0.1.4=pyhd8ed1ab_0
-  - constantly=15.1.0=py_0
-  - contourpy=1.1.1=py311he4fd1f5_1
-  - cookiecutter=2.4.0=pyhca7485f_0
-  - cryptography=41.0.5=py311h71175c2_0
-  - cssselect=1.2.0=pyhd8ed1ab_0
-  - curl=8.4.0=h2d989ff_0
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - cytoolz=0.12.2=py311heffc1b2_1
-  - dask=2023.10.1=pyhd8ed1ab_0
-  - dask-core=2023.10.1=pyhd8ed1ab_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - datasets=2.14.6=pyhd8ed1ab_0
-  - datashader=0.16.0=pyhd8ed1ab_0
-  - dav1d=1.2.1=hb547adb_0
-  - debugpy=1.8.0=py311ha891d26_1
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - diff-match-patch=20230430=pyhd8ed1ab_0
-  - dill=0.3.7=pyhd8ed1ab_0
-  - distributed=2023.10.1=pyhd8ed1ab_0
-  - docstring-to-markdown=0.13=pyhd8ed1ab_0
-  - docutils=0.20.1=py311h267d04e_2
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - et_xmlfile=1.1.0=pyhd8ed1ab_0
-  - exceptiongroup=1.1.3=pyhd8ed1ab_0
-  - executing=2.0.1=pyhd8ed1ab_0
-  - filelock=3.13.1=pyhd8ed1ab_0
-  - flake8=6.0.0=pyhd8ed1ab_0
-  - flask=3.0.0=pyhd8ed1ab_0
-  - fonttools=4.43.1=py311h05b510d_0
-  - fqdn=1.5.1=pyhd8ed1ab_0
-  - freetype=2.12.1=hadb7bae_2
-  - frozenlist=1.4.0=py311heffc1b2_1
-  - fsspec=2023.10.0=pyhca7485f_0
-  - gensim=4.3.2=py311h9e438b8_0
-  - gettext=0.21.1=h0186832_0
-  - gflags=2.2.2=hc88da5d_1004
-  - giflib=5.2.1=h1a8c8d9_3
-  - glib=2.78.0=ha614eb4_0
-  - glib-tools=2.78.0=ha614eb4_0
-  - glog=0.6.0=h6da1cb0_0
-  - gmp=6.2.1=h9f76cd9_0
-  - gmpy2=2.1.2=py311h2ba9262_1
-  - greenlet=3.0.1=py311hbaf5611_0
-  - gst-plugins-base=1.22.6=h27255cc_2
-  - gstreamer=1.22.6=h8c52bba_2
-  - h5py=3.10.0=nompi_py311h393cb7e_100
-  - hdf5=1.14.2=nompi_h3aba7b3_100
-  - holoviews=1.18.0=pyhd8ed1ab_0
-  - huggingface_hub=0.17.3=pyhd8ed1ab_0
-  - hvplot=0.9.0=pyhd8ed1ab_0
-  - hyperlink=21.0.0=pyhd3deb0d_0
-  - icu=73.2=hc8870d7_0
-  - idna=3.4=pyhd8ed1ab_0
-  - imagecodecs=2023.9.18=py311h0b517cc_2
-  - imageio=2.31.5=pyh8c1a49c_0
-  - imagesize=1.4.1=pyhd8ed1ab_0
-  - imbalanced-learn=0.11.0=pyhd8ed1ab_0
-  - importlib-metadata=6.8.0=pyha770c72_0
-  - importlib_metadata=6.8.0=hd8ed1ab_0
-  - importlib_resources=6.1.0=pyhd8ed1ab_0
-  - incremental=22.10.0=pyhd8ed1ab_0
-  - inflection=0.5.1=pyh9f0ad1d_0
-  - iniconfig=2.0.0=pyhd8ed1ab_0
-  - intake=0.7.0=pyhd8ed1ab_0
-  - intervaltree=3.1.0=pyhd8ed1ab_1
-  - ipykernel=6.26.0=pyh3cd1d5f_0
-  - ipython=8.17.2=pyh31c8845_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=8.1.1=pyhd8ed1ab_0
-  - isoduration=20.11.0=pyhd8ed1ab_0
-  - isort=5.12.0=pyhd8ed1ab_1
-  - itemadapter=0.8.0=pyhd8ed1ab_0
-  - itemloaders=1.1.0=pyhd8ed1ab_0
-  - itsdangerous=2.1.2=pyhd8ed1ab_0
-  - jaraco.classes=3.3.0=pyhd8ed1ab_0
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jellyfish=1.0.1=py311h0563b04_1
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jmespath=1.0.1=pyhd8ed1ab_0
-  - joblib=1.3.2=pyhd8ed1ab_0
-  - jq=1.6=h27ca646_1000
-  - json5=0.9.14=pyhd8ed1ab_0
-  - jsonpointer=2.4=py311h267d04e_3
-  - jsonschema=4.19.2=pyhd8ed1ab_0
-  - jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
-  - jsonschema-with-format-nongpl=4.19.2=pyhd8ed1ab_0
-  - jupyter=1.0.0=pyhd8ed1ab_10
-  - jupyter-lsp=2.2.0=pyhd8ed1ab_0
-  - jupyter_client=8.5.0=pyhd8ed1ab_0
-  - jupyter_console=6.6.3=pyhd8ed1ab_0
-  - jupyter_core=5.5.0=py311h267d04e_0
-  - jupyter_events=0.8.0=pyhd8ed1ab_0
-  - jupyter_server=2.9.1=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
-  - jupyterlab=4.0.7=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - jupyterlab_server=2.25.0=pyhd8ed1ab_0
-  - jupyterlab_widgets=3.0.9=pyhd8ed1ab_0
-  - jxrlib=1.1=h27ca646_2
-  - kaleido-core=0.2.1=h27ca646_0
-  - keyring=24.2.0=py311h267d04e_1
-  - kiwisolver=1.4.5=py311he4fd1f5_1
-  - krb5=1.21.2=h92f50d5_0
-  - lazy-object-proxy=1.9.0=py311heffc1b2_1
-  - lazy_loader=0.3=pyhd8ed1ab_0
-  - lcms2=2.15=hf2736f0_3
-  - lerc=4.0.0=h9a09cb3_0
-  - libabseil=20230802.1=cxx17_h13dd4ca_0
-  - libaec=1.1.2=h13dd4ca_1
-  - libarrow=13.0.0=h87fad27_13_cpu
-  - libavif16=1.0.1=h18c541d_2
-  - libblas=3.9.0=19_osxarm64_openblas
-  - libbrotlicommon=1.1.0=hb547adb_1
-  - libbrotlidec=1.1.0=hb547adb_1
-  - libbrotlienc=1.1.0=hb547adb_1
-  - libcblas=3.9.0=19_osxarm64_openblas
-  - libclang=15.0.7=default_h5dc8d65_3
-  - libclang13=15.0.7=default_hc7183e1_3
-  - libcrc32c=1.1.2=hbdafb3b_0
-  - libcurl=8.4.0=h2d989ff_0
-  - libcxx=16.0.6=h4653b0c_0
-  - libdeflate=1.19=hb547adb_0
-  - libedit=3.1.20191231=hc8eb9b7_2
-  - libev=4.33=h642e427_1
-  - libevent=2.1.12=h2757513_1
-  - libexpat=2.5.0=hb7217d7_1
-  - libffi=3.4.2=h3422bc3_5
-  - libgfortran=5.0.0=13_2_0_hd922786_1
-  - libgfortran5=13.2.0=hf226fd6_1
-  - libglib=2.78.0=h24e9cb9_0
-  - libgoogle-cloud=2.12.0=h5a37b55_3
-  - libgrpc=1.58.2=h19be7b0_0
-  - libiconv=1.17=he4db4b2_0
-  - libjpeg-turbo=3.0.0=hb547adb_1
-  - liblapack=3.9.0=19_osxarm64_openblas
-  - liblapacke=3.9.0=19_osxarm64_openblas
-  - libllvm14=14.0.6=hd1a9a77_4
-  - libllvm15=15.0.7=h504e6bf_3
-  - libnghttp2=1.55.1=h2b02ca0_0
-  - libogg=1.3.4=h27ca646_1
-  - libopenblas=0.3.24=openmp_hd76b1f2_0
-  - libopus=1.3.1=h27ca646_1
-  - libpng=1.6.39=h76d750c_0
-  - libpq=16.0=hcea71ed_1
-  - libprotobuf=4.24.3=hf590ac1_1
-  - libre2-11=2023.06.02=h1753957_0
-  - libsodium=1.0.18=h27ca646_1
-  - libspatialindex=1.9.3=hbdafb3b_4
-  - libsqlite=3.44.0=h091b4b1_0
-  - libssh2=1.11.0=h7a5bd25_0
-  - libthrift=0.19.0=h026a170_1
-  - libtiff=4.6.0=ha8a6c65_2
-  - libutf8proc=2.8.0=h1a8c8d9_0
-  - libvorbis=1.3.7=h9f76cd9_0
-  - libwebp=1.3.2=hf30222e_1
-  - libwebp-base=1.3.2=hb547adb_0
-  - libxcb=1.15=hf346824_0
-  - libxml2=2.11.5=h25269f3_1
-  - libxslt=1.1.37=h1728932_1
-  - libzlib=1.2.13=h53f4e23_5
-  - libzopfli=1.0.3=h9f76cd9_0
-  - linkify-it-py=2.0.0=pyhd8ed1ab_0
-  - llvm-openmp=17.0.4=hcd81f8e_0
-  - llvmlite=0.40.1=py311hea943cd_0
-  - locket=1.0.0=pyhd8ed1ab_0
-  - lxml=4.9.3=py311hbafe683_1
-  - lz4=4.3.2=py311h0c6baac_1
-  - lz4-c=1.9.4=hb7217d7_0
-  - markdown=3.5.1=pyhd8ed1ab_0
-  - markdown-it-py=3.0.0=pyhd8ed1ab_0
-  - markupsafe=2.1.3=py311heffc1b2_1
-  - mathjax=2.7.7=hce30654_3
-  - matplotlib=3.8.1=py311ha1ab1f8_0
-  - matplotlib-base=3.8.1=py311hfdba5f6_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mccabe=0.7.0=pyhd8ed1ab_0
-  - mdit-py-plugins=0.4.0=pyhd8ed1ab_0
-  - mdurl=0.1.0=pyhd8ed1ab_0
-  - mistune=3.0.1=pyhd8ed1ab_0
-  - more-itertools=10.1.0=pyhd8ed1ab_0
-  - mpc=1.3.1=h91ba8db_0
-  - mpfr=4.2.1=h9546428_0
-  - mpmath=1.3.0=pyhd8ed1ab_0
-  - msgpack-python=1.0.6=py311he4fd1f5_0
-  - multidict=6.0.4=py311he2be06e_1
-  - multipledispatch=0.6.0=py_0
-  - multiprocess=0.70.15=py311heffc1b2_1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mypy_extensions=1.0.0=pyha770c72_0
-  - mysql-common=8.0.33=hf9e6398_5
-  - mysql-libs=8.0.33=he3dca8b_5
-  - nbclient=0.8.0=pyhd8ed1ab_0
-  - nbconvert=7.10.0=pyhd8ed1ab_0
-  - nbconvert-core=7.10.0=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.10.0=pyhd8ed1ab_0
-  - nbformat=5.9.2=pyhd8ed1ab_0
-  - ncurses=6.4=h463b476_2
-  - nest-asyncio=1.5.8=pyhd8ed1ab_0
-  - networkx=3.2.1=pyhd8ed1ab_0
-  - nltk=3.8.1=pyhd8ed1ab_0
-  - notebook=7.0.6=pyhd8ed1ab_0
-  - notebook-shim=0.2.3=pyhd8ed1ab_0
-  - nspr=4.35=hb7217d7_0
-  - nss=3.94=hc6b9969_0
-  - numba=0.57.1=py311hbf3c4e2_0
-  - numexpr=2.8.7=py311h6e08293_4
-  - numpy=1.24.4=py311hb8f3215_0
-  - numpydoc=1.5.0=pyhd8ed1ab_0
-  - oniguruma=6.9.9=h93a5062_0
-  - openblas=0.3.24=openmp_hce3e5ba_0
-  - openjpeg=2.5.0=h4c1507b_3
-  - openpyxl=3.1.2=py311heffc1b2_0
-  - openssl=3.1.4=h0d3ecfb_0
-  - orc=1.9.0=hcd02cb2_3
-  - overrides=7.4.0=pyhd8ed1ab_0
-  - packaging=23.2=pyhd8ed1ab_0
-  - pandas=2.1.2=py311h6e08293_0
-  - pandoc=3.1.3=hce30654_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - panel=1.3.1=pyhd8ed1ab_0
-  - param=2.0.0=pyhca7485f_0
-  - parsel=1.8.1=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - partd=1.4.1=pyhd8ed1ab_0
-  - pathspec=0.11.2=pyhd8ed1ab_0
-  - patsy=0.5.3=pyhd8ed1ab_0
-  - pcre2=10.40=hb34f9b4_0
-  - pep8=1.7.1=py_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=10.1.0=py311hb9c5795_0
-  - pip=23.3.1=pyhd8ed1ab_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
-  - platformdirs=3.11.0=pyhd8ed1ab_0
-  - plotly=5.18.0=pyhd8ed1ab_0
-  - pluggy=1.3.0=pyhd8ed1ab_0
-  - ply=3.11=py_1
-  - prometheus_client=0.18.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.39=pyha770c72_0
-  - prompt_toolkit=3.0.39=hd8ed1ab_0
-  - protego=0.3.0=pyhd8ed1ab_0
-  - psutil=5.9.5=py311heffc1b2_1
-  - pthread-stubs=0.4=h27ca646_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - py-cpuinfo=9.0.0=pyhd8ed1ab_0
-  - pyarrow=13.0.0=py311h637fcfe_13_cpu
-  - pyasn1=0.5.0=pyhd8ed1ab_0
-  - pyasn1-modules=0.3.0=pyhd8ed1ab_0
-  - pycodestyle=2.10.0=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pyct=0.4.6=py_0
-  - pyct-core=0.4.6=py_0
-  - pycurl=7.45.1=py311h29f4747_3
-  - pydispatcher=2.0.5=py_1
-  - pydocstyle=6.3.0=pyhd8ed1ab_0
-  - pyerfa=2.0.1.1=py311h9ea6feb_0
-  - pyflakes=3.0.1=pyhd8ed1ab_0
-  - pygments=2.16.1=pyhd8ed1ab_0
-  - pylint=2.17.7=pyhd8ed1ab_0
-  - pylint-venv=3.0.3=pyhd8ed1ab_0
-  - pyls-spyder=0.4.0=pyhd8ed1ab_0
-  - pyobjc-core=10.0=py311hb702dc4_0
-  - pyobjc-framework-cocoa=10.0=py311hb702dc4_1
-  - pyobjc-framework-coreservices=9.1=py311he2be06e_0
-  - pyobjc-framework-fsevents=10.0=py311h267d04e_0
-  - pyodbc=5.0.1=py311hbaf5611_0
-  - pyopenssl=23.3.0=pyhd8ed1ab_0
-  - pyparsing=3.1.1=pyhd8ed1ab_0
-  - pyqt=5.15.9=py311hc49b008_5
-  - pyqt5-sip=12.12.2=py311ha891d26_5
-  - pyqtwebengine=5.15.9=py311h14ede98_5
-  - pysocks=1.7.1=pyha2e5f31_6
-  - pytables=3.9.1=py311hce229b4_0
-  - pytest=7.4.3=pyhd8ed1ab_0
-  - python=3.11.6=h47c9636_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.18.1=pyhd8ed1ab_0
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python-kaleido=0.2.1=pyhd8ed1ab_0
-  - python-lsp-black=1.3.0=pyhd8ed1ab_0
-  - python-lsp-jsonrpc=1.1.2=pyhd8ed1ab_0
-  - python-lsp-server=1.7.4=pyhd8ed1ab_0
-  - python-lsp-server-base=1.7.4=pyhd8ed1ab_0
-  - python-slugify=8.0.1=pyhd8ed1ab_2
-  - python-tzdata=2023.3=pyhd8ed1ab_0
-  - python-xxhash=3.4.1=py311heffc1b2_0
-  - python.app=1.4=py311h791f92f_3
-  - python_abi=3.11=4_cp311
-  - pytoolconfig=1.2.5=pyhd8ed1ab_0
-  - pytz=2023.3.post1=pyhd8ed1ab_0
-  - pyviz_comms=3.0.0=pyhd8ed1ab_0
-  - pywavelets=1.4.1=py311hb49d859_1
-  - pyyaml=6.0.1=py311heffc1b2_1
-  - pyzmq=25.1.1=py311he9c0408_2
-  - qdarkstyle=3.1=pyhd8ed1ab_0
-  - qstylizer=0.2.2=pyhd8ed1ab_0
-  - qt-main=5.15.8=h6bf1bb6_17
-  - qt-webengine=5.15.8=h78108cb_0
-  - qtawesome=1.2.3=pyhd8ed1ab_0
-  - qtconsole=5.4.4=pyhd8ed1ab_0
-  - qtconsole-base=5.4.4=pyha770c72_0
-  - qtpy=2.4.1=pyhd8ed1ab_0
-  - queuelib=1.6.2=pyhd8ed1ab_0
-  - rav1e=0.6.6=h69fbcac_2
-  - re2=2023.06.02=h6135d0a_0
-  - readline=8.2=h92ec313_1
-  - referencing=0.30.2=pyhd8ed1ab_0
-  - regex=2023.10.3=py311heffc1b2_0
-  - requests=2.31.0=pyhd8ed1ab_0
-  - requests-file=1.5.1=pyh9f0ad1d_0
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rich=13.6.0=pyhd8ed1ab_0
-  - rope=1.10.0=pyhd8ed1ab_0
-  - rpds-py=0.10.6=py311h94f323b_0
-  - rtree=1.1.0=py311hd698ff7_0
-  - s3fs=2023.10.0=pyhd8ed1ab_0
-  - sacremoses=0.0.53=pyhd8ed1ab_0
-  - safetensors=0.3.3=py311h0563b04_1
-  - scikit-image=0.22.0=py311h6e08293_2
-  - scikit-learn=1.3.2=py311ha25ca4d_1
-  - scipy=1.11.3=py311h93d07a4_1
-  - scrapy=2.10.0=py311h267d04e_0
-  - seaborn=0.13.0=hd8ed1ab_0
-  - seaborn-base=0.13.0=pyhd8ed1ab_0
-  - send2trash=1.8.2=pyhd1c38e8_0
-  - service_identity=18.1.0=py_0
-  - setuptools=68.2.2=pyhd8ed1ab_0
-  - sip=6.7.12=py311hbaf5611_0
-  - six=1.16.0=pyh6c4a22f_0
-  - smart_open=6.4.0=pyhd8ed1ab_0
-  - snappy=1.1.10=h17c5cce_0
-  - sniffio=1.3.0=pyhd8ed1ab_0
-  - snowballstemmer=2.2.0=pyhd8ed1ab_0
-  - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - soupsieve=2.5=pyhd8ed1ab_1
-  - sphinx=7.2.6=pyhd8ed1ab_0
-  - sphinxcontrib-applehelp=1.0.7=pyhd8ed1ab_0
-  - sphinxcontrib-devhelp=1.0.5=pyhd8ed1ab_0
-  - sphinxcontrib-htmlhelp=2.0.4=pyhd8ed1ab_0
-  - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_0
-  - sphinxcontrib-qthelp=1.0.6=pyhd8ed1ab_0
-  - sphinxcontrib-serializinghtml=1.1.9=pyhd8ed1ab_0
-  - spyder=5.4.5=py311h267d04e_0
-  - spyder-kernels=2.4.4=unix_pyh707e725_0
-  - sqlalchemy=2.0.22=py311h05b510d_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - statsmodels=0.14.0=py311h9ea6feb_2
-  - svt-av1=1.7.0=hb765f3a_0
-  - sympy=1.12=pypyh9d50eac_103
-  - tabulate=0.9.0=pyhd8ed1ab_1
-  - tblib=2.0.0=pyhd8ed1ab_0
-  - tenacity=8.2.3=pyhd8ed1ab_0
-  - terminado=0.17.1=pyhd1c38e8_0
-  - text-unidecode=1.3=pyhd8ed1ab_1
-  - textdistance=4.5.0=pyhd8ed1ab_0
-  - threadpoolctl=3.2.0=pyha21a80b_0
-  - three-merge=0.1.1=pyh9f0ad1d_0
-  - tifffile=2023.9.26=pyhd8ed1ab_0
-  - tinycss2=1.2.1=pyhd8ed1ab_0
-  - tk=8.6.13=hb31c410_0
-  - tldextract=5.0.1=pyhd8ed1ab_0
-  - tokenizers=0.14.1=py311hd6c2c79_2
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - tomlkit=0.12.1=pyha770c72_0
-  - toolz=0.12.0=pyhd8ed1ab_0
-  - tornado=6.3.3=py311heffc1b2_1
-  - tqdm=4.66.1=pyhd8ed1ab_0
-  - traitlets=5.13.0=pyhd8ed1ab_0
-  - transformers=4.34.1=pyhd8ed1ab_0
-  - twisted=23.10.0=py311h05b510d_0
-  - types-python-dateutil=2.8.19.14=pyhd8ed1ab_0
-  - typing-extensions=4.8.0=hd8ed1ab_0
-  - typing_extensions=4.8.0=pyha770c72_0
-  - typing_utils=0.1.0=pyhd8ed1ab_0
-  - tzdata=2023c=h71feb2d_0
-  - uc-micro-py=1.0.1=pyhd8ed1ab_0
-  - ujson=5.8.0=py311ha891d26_0
-  - unixodbc=2.3.12=h0e2417a_0
-  - uri-template=1.3.0=pyhd8ed1ab_0
-  - urllib3=1.26.18=pyhd8ed1ab_0
-  - w3lib=2.1.2=pyhd8ed1ab_0
-  - watchdog=3.0.0=py311heffc1b2_1
-  - wcwidth=0.2.9=pyhd8ed1ab_0
-  - webcolors=1.13=pyhd8ed1ab_0
-  - webencodings=0.5.1=pyhd8ed1ab_2
-  - websocket-client=1.6.4=pyhd8ed1ab_0
-  - werkzeug=3.0.1=pyhd8ed1ab_0
-  - whatthepatch=1.0.5=pyhd8ed1ab_0
-  - wheel=0.41.3=pyhd8ed1ab_0
-  - widgetsnbextension=4.0.9=pyhd8ed1ab_0
-  - wrapt=1.15.0=py311heffc1b2_1
-  - wurlitzer=3.0.3=pyhd8ed1ab_0
-  - xarray=2023.10.1=pyhd8ed1ab_0
-  - xlwings=0.30.12=py311h267d04e_1
-  - xorg-libxau=1.0.11=hb547adb_0
-  - xorg-libxdmcp=1.1.3=h27ca646_0
-  - xxhash=0.8.2=hb547adb_0
-  - xyzservices=2023.10.1=pyhd8ed1ab_0
-  - xz=5.2.6=h57fd34a_0
-  - yaml=0.2.5=h3422bc3_2
-  - yapf=0.40.1=pyhd8ed1ab_0
-  - yarl=1.9.2=py311h05b510d_1
-  - zeromq=4.3.5=h965bd2d_0
-  - zfp=1.0.0=h82938aa_4
-  - zict=3.0.0=pyhd8ed1ab_0
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib-ng=2.0.7=h1a8c8d9_0
-  - zope.interface=6.1=py311h05b510d_0
-  - zstd=1.5.5=h4f39d0f_0
-  - pip:
-      - annotated-types==0.6.0
-      - ansi2html==1.8.0
-      - anyio==3.7.1
-      - dash==2.14.1
-      - dash-bootstrap-components==1.5.0
-      - dash-core-components==2.0.0
-      - dash-daq==0.5.0
-      - dash-html-components==2.0.0
-      - dash-table==5.0.0
-      - fastapi==0.104.1
-      - h11==0.14.0
-      - httptools==0.6.1
-      - huawei-lte-api==1.7.3
-      - pycryptodomex==3.19.0
-      - pydantic==2.4.2
-      - pydantic-core==2.10.1
-      - python-dotenv==1.0.0
-      - retrying==1.3.4
-      - starlette==0.27.0
-      - uvicorn==0.23.2
-      - uvloop==0.19.0
-      - watchfiles==0.21.0
-      - websockets==12.0
-      - xmltodict==0.13.0
+  - conda=24.5.0
+  - uvicorn
+  - pandas
+  - fastapi
+  - dash
+  - conda-forge::dash-bootstrap-components
+  - conda-forge::dash-daq
 prefix: /Users/SebasPenaherrera/anaconda3/envs/restapi
